added featured section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
 
         </section>
     </header>
-    <main></main>
+    <main>
+        <!-- featured flower section -->
+        <section class="featured-flower">
+            <div class="featured-text">
+                <h1 class="title-primary">Our Featured Flowers</h1>
+                <p class="featured-desc">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 
