added flowers images

--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
                 <h1 class="title-primary">Our Featured Flowers</h1>
                 <p class="featured-desc">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
             </div>
+            <!-- featured image section -->
+            <div class="featured-flower-img">
+                <div class="pink-flower">
+                    <img class="pink" src="image/pngwing 6.png" alt="">
+                    <p class="flower-desc">Pink Flower Tree</p>
+                </div>
+                <div class="red-flower">
+                    <img class="red" src="image/pngwing 5.png" alt="">
+                    <p class="flower-desc">Red Flower Tree</p>
+                </div>
+                <div class="yellow-flower">
+                    <img class="yellow" src="image/pngwing 7.png" alt="">
+                    <p class="flower-desc">Yellow Flower Tree</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer></footer>
