added hot deal section

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
     </header>
     <main>
         <!-- featured flower section -->
+
         <section class="featured-flower">
             <div class="featured-text">
                 <h1 class="title-primary">Our Featured Flowers</h1>
                 <p class="featured-desc">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
             </div>
+
             <!-- featured image section -->
             <div class="featured-flower-img">
                 <div class="pink-flower">
@@ -53,6 +55,19 @@
                 </div>
             </div>
         </section>
+
+        <!-- hot deal section -->
+        <section class="hot-deal">
+            <div class="hot-deal-text">
+                <h1 class="title-primary">Hot Deal ! Sale Up To 25% <span class="off">Off</span></h1>
+                <p class="deal-desc">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                <button class="btn">Sign Up</button>
+            </div>
+            <div class="hot-deal-img">
+                <img src="image/pngwing 8.png" alt="">
+            </div>
+        </section>
+
     </main>
     <footer></footer>
 </body>
