added insta title section

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
                 <img src="image/pngwing 8.png" alt="">
             </div>
         </section>
+        <!-- instagram section -->
+        <div class="insta-text">
+            <h1 class="title-primary">Instagram</h1>
+            <p class="insta-desc">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+        </div>
 
     </main>
     <footer></footer>
