done insta section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <section class="featured-flower">
             <div class="featured-text">
                 <h1 class="title-primary">Our Featured Flowers</h1>
-                <p class="featured-desc">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                <p class="featured-desc">It is a long established fact that a reader will be distracted by the readable
+                    <br>content of a page when looking at its layout.</p>
             </div>
 
             <!-- featured image section -->
@@ -60,7 +61,8 @@
         <section class="hot-deal">
             <div class="hot-deal-text">
                 <h1 class="title-primary">Hot Deal ! Sale Up To 25% <span class="off">Off</span></h1>
-                <p class="deal-desc">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                <p class="deal-desc">It is a long established fact that a reader will be distracted by the readable
+                    <br>content of a page when looking at its layout.</p>
                 <button class="btn">Sign Up</button>
             </div>
             <div class="hot-deal-img">
@@ -70,8 +72,16 @@
         <!-- instagram section -->
         <div class="insta-text">
             <h1 class="title-primary">Instagram</h1>
-            <p class="insta-desc">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+            <p class="insta-desc">It is a long established fact that a reader will be distracted by the readable
+                <br>content of a page when looking at its layout.</p>
         </div>
+        <!-- instagram image section -->
+        <section class="insta-img">
+            <div><img class="instagram-img" src="image/Rectangle 4.png" alt=""></div>
+            <div><img class="instagram-img" src="image/Flower 01.png" alt=""></div>
+            <div><img class="instagram-img" src="image/Rectangle 5.png" alt=""></div>
+            <div><img class="instagram-img" src="image/Rectangle 6.png" alt=""></div>
+        </section>
 
     </main>
     <footer></footer>
