completed hot deals section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
             <div><img class="instagram-img" src="image/Rectangle 5.png" alt=""></div>
             <div><img class="instagram-img" src="image/Rectangle 6.png" alt=""></div>
         </section>
+        <!-- latest deals section -->
+        <section class="latest-deal">
+            <h1 class="title-primary">Get The Latest Deals</h1>
+            <p class="hot-deal-desc">$30 coupon for first shopping</p>
+            <input class="email" type="email" name="" id="" placeholder="Enter your email here">
+            <button class="btn">Subscribe</button>
+        </section>
 
     </main>
     <footer></footer>
