--- a/index.html
+++ b/index.html
@@ -91,7 +91,15 @@
         </section>
 
     </main>
-    <footer></footer>
+    <footer class="footer-container">
+        <div class="footer-text">
+            <h1 class="title-primary foot"><span class="off">Flower</span>Shop</h1>
+            <p class="footer-desc">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+        </div>
+        <div class="footer-end">
+            <small><span>&#64</span>2020-2023, FlowerShop.com. All rights reserved. </small>
+        </div>
+    </footer>
 </body>
 
 </html>
