--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
             </div>
         </section>
 
+        <section class="info">
+            <div class="delivery">
+                <img src="image/Group 57.png" alt="">
+                <p class="info-desc">Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div class="delivery">
+                <img src="image/Group 58.png" alt="">
+                <p class="info-desc">Fresh Flowers. Local Growers.</p>
+            </div>
+            <div class="delivery">
+                <img src="image/Group 59.png" alt="">
+                <p class="info-desc">24/7 Free Support.</p>
+            </div>
+        </section>
+
         <!-- hot deal section -->
         <section class="hot-deal">
             <div class="hot-deal-text">
