--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 </div>
             </div>
         </section>
+        <!-- info and delivery section -->
 
         <section class="info">
             <div class="delivery">
