added custom order section

--- a/index.html
+++ b/index.html
@@ -106,6 +106,24 @@
             <button class="btn">Subscribe</button>
         </section>
 
+        <!-- custom bouquet section -->
+        <section class="custom-bouquet">
+            <div class="custom-text">
+                <h1 class="title-primary">Order Custom Made Bouquet</h1>
+                <p class="custom-desc">At our flower shop we also provide custom made bouquet as our customer want.<br>We are always ready to making your experience delightful with us.</p>
+            </div>
+            <div class="order-form">
+                <input class="order" type="text" placeholder="Your Name">
+                <br>
+                <input class="order" type="text" placeholder="Your Number">
+                <br>
+                <textarea class="order-details" name="" id="" cols="40" rows="5" placeholder="Your custom Bouquet details"></textarea>
+                <br>
+                <button class="btn order-btn">Order Now</button>
+            </div>
+
+        </section>
+
     </main>
     <footer class="footer-container">
         <div class="footer-text">
